@@ -19,11 +19,15 @@ package org.apache.hadoop.security.authorize;
 
 import java.io.IOException;
 
+import org.apache.hadoop.fs.CommonConfigurationKeys;
 import org.apache.hadoop.ipc.VersionedProtocol;
+import org.apache.hadoop.security.KerberosInfo;
 
 /**
  * Protocol which is used to refresh the authorization policy in use currently.
  */
+@KerberosInfo(
+    serverPrincipal=CommonConfigurationKeys.HADOOP_SECURITY_SERVICE_USER_NAME_KEY)
 public interface RefreshAuthorizationPolicyProtocol extends VersionedProtocol {
   
   /**
